--- a/backend/package.json
+++ b/backend/package.json
@@ -60,6 +60,7 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "nodemon": "^3.1.10",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
