--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,6 +21,7 @@
   "type": "commonjs",
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.2",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/drawer": "^7.5.2",
     "@react-navigation/native": "^7.1.14",
