--- a/mobile/package.json
+++ b/mobile/package.json
@@ -28,6 +28,8 @@
     "@react-navigation/stack": "^7.4.2",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
+    "react": "^19.1.0",
+    "react-native": "^0.80.1",
     "react-native-paper": "^5.14.5",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
@@ -36,6 +38,8 @@
   },
   "devDependencies": {
     "@types/react": "^19.1.8",
-    "@types/react-native": "^0.72.8"
+    "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "typescript": "^5.8.3"
   }
 }
