Add initial setup for homeTeam API integration tests
- Created package.json with scripts for running tests using Jest
- Added TypeScript configuration in tsconfig.json for project compilation
- Implemented admin access test script to validate admin role and endpoint access

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "docker:down": "cd docker && docker-compose down",
     "docker:logs": "cd docker && docker-compose logs -f",
     "api:test": "pwsh scripts/test-api.ps1",
+    "test:integration": "cd scripts && npm test",
+    "test:api": "cd scripts && node api-test-suite.js",
+    "test:api:watch": "cd scripts && nodemon api-test-suite.js",
     "clean": "npm run clean:backend && npm run clean:mobile && npm run clean:admin",
     "clean:backend": "cd backend && rm -rf node_modules dist",
     "clean:mobile": "cd mobile && rm -rf node_modules",
