--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,8 +7,11 @@ JWT_SECRET=your-super-secret-jwt-key-here-change-in-production
 JWT_EXPIRES_IN=7d
 
 # OAuth Ayarları (Google)
-GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_WEB_CLIENT_ID=your-google-web-client-id.apps.googleusercontent.com
+GOOGLE_IOS_CLIENT_ID=your-google-ios-client-id.apps.googleusercontent.com
+GOOGLE_ANDROID_CLIENT_ID=your-google-android-client-id.apps.googleusercontent.com
 
 # OAuth Ayarları (Facebook)
 FACEBOOK_APP_ID=your-facebook-app-id
