feat: Initialize mobile app with Gradle and Firebase setup
- Added gradle-wrapper.properties for Gradle 8.0.1 configuration.
- Included gradlew and gradlew.bat scripts for Gradle execution.
- Created settings.gradle to configure project modules and dependencies.
- Added firebase.json for Firebase configuration with project details.
- Included GoogleService-Info.plist for iOS Firebase setup.
- Configured react-native.config.js for vector icons dependency.
- Implemented firebaseNotificationService for handling notifications.
- Created mobile-test-setup.js script for setting up mobile test environment.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "install:all": "npm install && npm run install:backend && npm run install:mobile && npm run install:admin",
     "install:backend": "cd backend && npm install",
     "install:mobile": "cd mobile && npm install",
-    "install:admin": "cd admin && npm install"
+    "install:admin": "cd admin && npm install",
+    "mobile:setup": "node scripts/mobile-test-setup.js",
+    "mobile:android": "node scripts/mobile-test-setup.js android",
+    "mobile:ios": "node scripts/mobile-test-setup.js ios"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
