--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,7 @@
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "firebase-admin": "^13.4.0",
     "google-auth-library": "^10.2.0",
     "mongoose": "^8.16.1",
     "passport": "^0.7.0",
