--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,30 +20,41 @@
   "license": "MIT",
   "type": "commonjs",
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.4.2",
-    "@react-native-google-signin/google-signin": "^15.0.0",
-    "@react-navigation/bottom-tabs": "^7.4.2",
-    "@react-navigation/drawer": "^7.5.2",
-    "@react-navigation/native": "^7.1.14",
-    "@react-navigation/stack": "^7.4.2",
-    "@reduxjs/toolkit": "^2.8.2",
-    "axios": "^1.10.0",
-    "react": "^19.1.0",
-    "react-native": "^0.80.1",
-    "react-native-paper": "^5.14.5",
+    "@react-native-async-storage/async-storage": "^1.19.0",
+    "@react-native-community/datetimepicker": "^7.2.0",
+    "@react-native-firebase/analytics": "^20.4.0",
+    "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/messaging": "^20.4.0",
+    "@react-native-google-signin/google-signin": "^12.0.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.0",
+    "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.5.0",
+    "react": "18.2.0",
+    "react-native": "0.72.7",
+    "react-native-paper": "^5.10.0",
+    "react-native-safe-area-context": "^4.7.0",
+    "react-native-screens": "^3.22.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@react-native-community/cli": "^19.1.1",
-    "@react-native/babel-preset": "^0.80.2",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
     "@react-native/metro-config": "^0.80.2",
-    "@types/react": "^19.1.8",
-    "@types/react-native": "^0.72.8",
+    "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.18",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
+    "jest": "^29.2.1",
+    "metro-config": "^0.83.1",
+    "metro-react-native-babel-preset": "0.76.8",
+    "react-test-renderer": "18.2.0",
     "typescript": "^5.8.3"
   }
 }
