--- a/newMobile/android/app/build.gradle
+++ b/newMobile/android/app/build.gradle
@@ -31,8 +31,8 @@ android {
     ndkVersion rootProject.ext.ndkVersion
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     namespace "com.hometeammobile"
@@ -74,6 +74,10 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -109,5 +113,7 @@ dependencies {
         }
     }
 }
+
+// If needed, we can pin androidx.core here later
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
