--- a/admin/package.json
+++ b/admin/package.json
@@ -39,7 +39,8 @@
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.8",
-    "zustand": "^5.0.6"
+  "zustand": "^5.0.6",
+  "scheduler": "^0.23.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
