--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,15 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+  "test:e2e": "jest --config ./test/jest-e2e.json",
+  "deps:analyze": "madge --extensions ts ./src --circular",
+  "deps:graph": "madge --extensions ts ./src --image dependency-graph.svg",
+  "deps:graph:dot": "madge --extensions ts ./src --dot > dependency-graph.dot",
+  "deps:graph:json": "madge --extensions ts ./src --json > dependency-graph.json",
+  "deps:circular": "madge --extensions ts ./src --circular --warning",
+  "depcruise:check": "depcruise --config .dependency-cruiser.json src",
+  "depcruise:json": "depcruise --config .dependency-cruiser.json --output-type json src > dependency-cruise.json",
+  "depcruise:html": "depcruise --config .dependency-cruiser.json --output-type html src > dependency-cruise.html"
   },
   "keywords": [
     "nestjs",
@@ -53,8 +61,9 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
-    "redis": "^5.6.1",
-    "socket.io": "^4.8.1"
+  "redis": "^5.6.1",
+  "socket.io": "^4.8.1",
+  "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
@@ -68,7 +77,9 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.3",
+  "dependency-cruiser": "^16.0.0",
     "jest": "^29.7.0",
+  "madge": "^6.1.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
