--- a/newMobile/package.json
+++ b/newMobile/package.json
@@ -23,23 +23,29 @@
   "license": "MIT",
   "type": "commonjs",
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^6.5.0",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/stack": "^6.3.0",
     "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.11.0",
     "react": "18.2.0",
-    "react-native": "0.72.10",
-    "react-native-safe-area-context": "^4.7.0",
-    "react-native-screens": "^3.25.0",
-    "react-redux": "^8.1.0"
+  "react-native": "0.73.4",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-paper": "^5.14.5",
+  "react-native-safe-area-context": "^4.8.2",
+  "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-redux": "^8.1.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.23.0",
     "@babel/runtime": "^7.23.0",
-    "@react-native/metro-config": "^0.72.0",
+  "@react-native/metro-config": "^0.73.0",
     "@types/react": "^18.2.0",
-    "@types/react-native": "^0.72.0",
+  "@types/react-native": "^0.73.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -47,7 +53,7 @@
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-native": "^4.1.0",
     "jest": "^29.7.0",
-    "metro-react-native-babel-preset": "^0.76.0",
+  "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.1.0",
     "typescript": "^5.3.0"
   },
